# PySIMRecon

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conda_requirements.txt  defaults.cfg  environment.yaml  pyproject.toml  wavelengths.cfg
.github/workflows/: README from docs.yaml  black.yaml  generate_README.yaml  generate_help_docs.yaml  trigger_docs_generation.yaml
conda/: meta.yaml
docs/: template.md
docs/help/: otf_view.txt  sim_otf.txt  sim_recon.txt
docs/sections/: command_line.md  configuration.md  installation.md
releng/: README_from_docs.sh  generate_help_docs.sh
src/configs/: 452.cfg  525.cfg  605.cfg  655.cfg  config.ini  defaults.cfg  example_wavelength_config.cfg  wavelengths.cfg
src/cryoSIM_reconstruction/: main.py
src/cryosim_recon/: __init__.py  __main__.py  cli.py  main.py  otfs.py  prep.py  progress.py  progress_wrapper.py  recon.py  settings.py  units.py
src/cryosim_recon/cli/: otf.py  parsing.py  recon.py
src/cryosim_recon/files/: __init__.py  _setting_formatting.py  config.py  dv.py  images.py  main.py  sliceable_dv.py  sliceable_mrc.py  tiff.py  utils.py
src/cryosim_recon/settings/: __init__.py  dataclasses.py  formatting.py
src/sim_recon/: __init__.py  exceptions.py  info.py  main.py  otf_view.py  otfs.py  progress.py  recon.py
src/sim_recon/cli/: dv_to_tiff.py  otf.py  otf_view.py  parsing.py  recon.py  tiff_to_mrc.py
src/sim_recon/cli/parsing/: otf.py  otf_view.py  recon.py  shared.py
src/sim_recon/files/: config.py  dv.py  images.py  utils.py
src/sim_recon/images/: __init__.py  dataclasses.py  dv.py  tiff.py  utils.py
src/sim_recon/settings/: __init__.py  dataclasses.py  formatting.py
tests/test_images/: test_utils.py
