[project]
name = "cryosim-recon"
version = "0.1.0"
description = "A simple tool to reconstruct SIM data and and process OTFs from Microscope-Cockpit's DV files with pyCUDAsirecon from DLS B24's cryoSIM"
authors = [
    { name = "Thomas Fish", email = "thomas.fish@diamond.ac.uk" },
]
dependencies = [
    "pycudasirecon ~= 0.1.0",
    "numpy ~= 1.26.4",
    "tifffile >=2024.2.12",
    "mrc>=0.3.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project.scripts]
sim-recon = "cryosim_recon.cli:sim_recon"
sim-otf = "cryosim_recon.cli:sim_otf"

[project.optional-dependencies]
progress = [
    "tqdm>=4.66.4",
]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/cryosim_recon",
]

[tool.pyright]
reportMissingImports = false
strict = [
    "src/**",
]
