[project]
name = "PySIMRecon"
version = "0.1.0"
description = "Easy to use wrapper for pyCUDAsirecon, allowing the use of DV (DeltaVision) files without IVE/Priism"
authors = [
    { name = "Thomas Fish", email = "thomas.fish@diamond.ac.uk" },
]
dependencies = [
    "cudasirecon >= 1.2.0",
    "pycudasirecon ~= 0.1.0",
    "numpy ~= 1.26.4",
    "matplotlib ~= 3.9.2",
    "tifffile >=2024.2.12",
    "mrc>=0.3.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project.scripts]
sim-recon = "sim_recon.cli.recon:main"
sim-otf = "sim_recon.cli.otf:main"
dv2tiff = "sim_recon.cli.dv_to_tiff:main"
otf-view = "sim_recon.cli.otf_view:main"

[project.optional-dependencies]
progress = [
    "tqdm>=4.66.4",
]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pre-commit",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/sim_recon",
]

[tool.pyright]
include = [
    "src/**",
]

[tool.mypy]
warn_unused_ignores = true
